// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > matches snapshot at md breakpoint 1`] = `
<DocumentFragment>
  <a
    class="sr-only focus:not-sr-only focus:ring top-2 left-2"
    href="#main"
  >
    Skip to content
  </a>
  <header
    class="bg-gray-50"
  >
    <div
      class="relative h-[10px] w-full"
      data-testid="layer-stack"
    >
      <div
        class="absolute inset-x-0 top-0 h-[10px] bg-primary rounded-t-lg"
      />
      <div
        class="absolute inset-x-0 top-0 h-[6px] bg-accent/10 rounded-t-md"
      />
      <div
        class="absolute inset-x-0 top-0 h-[3px] bg-muted rounded-t-sm"
      />
    </div>
    <nav
      aria-label="Primary"
      data-headlessui-state=""
      role="navigation"
    >
      <div
        class="container flex justify-between items-center gap-6 p-4"
      >
        <a
          aria-current="page"
          class="lobster text-2xl text-primary font-semibold"
          href="/"
        >
          Social Tools Hub
        </a>
        <div
          class="flex items-center gap-2"
        >
          <div
            class="hidden md:flex md:space-x-4"
          >
            <a
              class="px-4 py-2 rounded-full transition-colors border-2 border-primary text-primary hover:bg-primary/10"
              href="/learn-more"
            >
              Learn More
            </a>
            <a
              class="px-4 py-2 rounded-full transition-colors bg-primary text-primary-foreground hover:bg-primary/90"
              href="/tools"
            >
              Browse Tools
            </a>
          </div>
          <div
            class="md:hidden"
          >
            <button
              aria-expanded="false"
              aria-label="Toggle navigation"
              class="rounded p-2"
              data-focus=""
              data-headlessui-state="focus"
              id="headlessui-disclosure-button-«ra»"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ☰
              </span>
            </button>
          </div>
          <button
            class="p-2 rounded-full border border-accent/20"
            type="button"
          >
            <span
              class="sr-only"
            >
              Toggle dark mode
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-moon w-5 h-5 md:w-6 md:h-6 shrink-0 text-accent"
              data-icon="moon"
              data-prefix="fas"
              role="img"
              viewBox="0 0 384 512"
            >
              <path
                d="M223.5 32C100 32 0 132.3 0 256S100 480 223.5 480c60.6 0 115.5-24.2 155.8-63.4c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6c-96.9 0-175.5-78.8-175.5-176c0-65.8 36-123.1 89.3-153.3c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </nav>
  </header>
</DocumentFragment>
`;

exports[`Header > matches snapshot at sm breakpoint 1`] = `
<DocumentFragment>
  <a
    class="sr-only focus:not-sr-only focus:ring top-2 left-2"
    href="#main"
  >
    Skip to content
  </a>
  <header
    class="bg-gray-50"
  >
    <div
      class="relative h-[10px] w-full"
      data-testid="layer-stack"
    >
      <div
        class="absolute inset-x-0 top-0 h-[10px] bg-primary rounded-t-lg"
      />
      <div
        class="absolute inset-x-0 top-0 h-[6px] bg-accent/10 rounded-t-md"
      />
      <div
        class="absolute inset-x-0 top-0 h-[3px] bg-muted rounded-t-sm"
      />
    </div>
    <nav
      aria-label="Primary"
      data-headlessui-state=""
      role="navigation"
    >
      <div
        class="container flex justify-between items-center gap-6 p-4"
      >
        <a
          aria-current="page"
          class="lobster text-2xl text-primary font-semibold"
          href="/"
        >
          Social Tools Hub
        </a>
        <div
          class="flex items-center gap-2"
        >
          <div
            class="hidden md:flex md:space-x-4"
          >
            <a
              class="px-4 py-2 rounded-full transition-colors border-2 border-primary text-primary hover:bg-primary/10"
              href="/learn-more"
            >
              Learn More
            </a>
            <a
              class="px-4 py-2 rounded-full transition-colors bg-primary text-primary-foreground hover:bg-primary/90"
              href="/tools"
            >
              Browse Tools
            </a>
          </div>
          <div
            class="md:hidden"
          >
            <button
              aria-expanded="false"
              aria-label="Toggle navigation"
              class="rounded p-2"
              data-focus=""
              data-headlessui-state="focus"
              id="headlessui-disclosure-button-«r8»"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ☰
              </span>
            </button>
          </div>
          <button
            class="p-2 rounded-full border border-accent/20"
            type="button"
          >
            <span
              class="sr-only"
            >
              Toggle dark mode
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-moon w-5 h-5 md:w-6 md:h-6 shrink-0 text-accent"
              data-icon="moon"
              data-prefix="fas"
              role="img"
              viewBox="0 0 384 512"
            >
              <path
                d="M223.5 32C100 32 0 132.3 0 256S100 480 223.5 480c60.6 0 115.5-24.2 155.8-63.4c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6c-96.9 0-175.5-78.8-175.5-176c0-65.8 36-123.1 89.3-153.3c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </nav>
  </header>
</DocumentFragment>
`;
